--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "cryptography",
     "python-jose[cryptography]",
     "passlib[bcrypt]",
+    "bcrypt==4.0.1",
     "python-multipart",
 ]
 
